# pixel_color

./: .gitignore  README.md  pixcol.py  pixcol.spec  pixcol3.py  pixel-color2.py  pixel_color.py  pyproject.toml
src/pixel_color/: __init__.py
