[project]
name = "pixcol"
version = "0.1.0"
description = "Fab's Pixel Color"
authors = [
    { name = "Fabrizio Nastri"}
]
dependencies = [
    "pyautogui>=0.9.54",
    "pillow>=11.0.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.9.0",
    "pyinstaller>=6.11.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pixel_color"]
